--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -27,15 +27,22 @@
                         <span>{{ .info }}</span>
                     </div>
                     {{ end }}
+                    <div class="con-info clearfix">
+                        <i class="ti-email"></i>
+                        <span>
+                            Tell us about your project with <a class="text-info" href="mailto:hello@paisley.digital?cc=jahan@paisley.digital&subject=Help Us with Our Project">hello@paisley.digital</a>
+                        </span>
+                    </div>
+                    <div class="con-info clearfix">
+                        <i class="ti-linkedin"></i>
+                        <span>
+                            <a class="text-info" href="https://www.linkedin.com/company/paisley-digital">LinkedIn</a>
+                        </span>
+                    </div>
                 </div>
             </div>
-
-            <p>Tell us about your project: <a
-                    href="mailto:hello@paisley.digital?cc=jahan@paisley.digital&subject=Help Us with Our Project">hello@paisley.digital</a>
-
-                {{ end }}
-                {{ end }}
-
+            {{ end }}
+            {{ end }}
         </div>
     </div>
 </section>
