--- a/layouts/partials/funfacts.html
+++ b/layouts/partials/funfacts.html
@@ -1,25 +1,25 @@
-{{ $data := index .Site.Data .Site.Language.Lang }}
+<!--{{ $data := index .Site.Data .Site.Language.Lang }}-->
 
-{{ if $data.funfacts.funfacts.enable }}
-{{ with $data.funfacts.funfacts }}
-{{"<!-- Start Counter Section -->" | safeHTML}}
-<section id="counter" class="parallax-section bg-1 section overly" style='background-image: url("{{ .bg_image_webp | absURL }}")'>
-	<!-- this image is for trigger this section fallback background image -->
-	<img style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url({{ .bg_image | absURL }})'" src="{{ .bg_image_webp | absURL }}" />
-	<div class="container">
-		<div class="row justify-content-center">
-			{{ range .counter_item }}
-			<div class="col-lg-3 col-md-6 col-12 text-center wow fadeInDown" data-wow-duration="500ms">
-				<div class="counters-item">
-					<i class="{{ .icon }}"></i>
-					<span class="count" data-count="{{ .count }}">0</span>
-					<h3>{{ .title | markdownify }}</h3>
-				</div>
-			</div>
-			{{ end }}
-		</div>
-	</div>
-</section>
-{{"<!-- /Counter Section -->" | safeHTML}}
-{{ end }}
-{{ end }}
+<!--{{ if $data.funfacts.funfacts.enable }}-->
+<!--{{ with $data.funfacts.funfacts }}-->
+<!--{{"&lt;!&ndash; Start Counter Section &ndash;&gt;" | safeHTML}}-->
+<!--<section id="counter" class="parallax-section bg-1 section overly" style='background-image: url("{{ .bg_image_webp | absURL }}")'>-->
+<!--	&lt;!&ndash; this image is for trigger this section fallback background image &ndash;&gt;-->
+<!--	<img style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url({{ .bg_image | absURL }})'" src="{{ .bg_image_webp | absURL }}" />-->
+<!--	<div class="container">-->
+<!--		<div class="row justify-content-center">-->
+<!--			{{ range .counter_item }}-->
+<!--			<div class="col-lg-3 col-md-6 col-12 text-center wow fadeInDown" data-wow-duration="500ms">-->
+<!--				<div class="counters-item">-->
+<!--					<i class="{{ .icon }}"></i>-->
+<!--					<span class="count" data-count="{{ .count }}">0</span>-->
+<!--					<h3>{{ .title | markdownify }}</h3>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			{{ end }}-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
+<!--{{"&lt;!&ndash; /Counter Section &ndash;&gt;" | safeHTML}}-->
+<!--{{ end }}-->
+<!--{{ end }}-->
