Refine navigation bar

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -3,13 +3,13 @@
 	<div class="container">
 
 		{{"<!-- logo -->" | safeHTML}}
-<!--		<a class="navbar-brand logo" href="{{ .Site.BaseURL | relLangURL }}">-->
-<!--			{{ if .Site.Params.logo }}-->
-<!--			<img width="65px" class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">-->
-<!--			{{ else }}-->
-<!--			{{ .Site.Title }}-->
-<!--			{{ end }}-->
-<!--		</a>-->
+		<a class="navbar-brand logo" href="{{ .Site.BaseURL | relLangURL }}">
+			{{ if .Site.Params.logo }}
+			<img width="200px" class="img-fluid" src="http://localhost:1313/images/logo-horizontal.png" alt="{{ .Site.Title }}">
+			{{ else }}
+			{{ .Site.Title }}
+			{{ end }}
+		</a>
 		{{"<!-- /logo -->" | safeHTML}}
 
 		{{"<!-- responsive nav button -->" | safeHTML}}
@@ -23,7 +23,7 @@
 		{{"<!-- main nav -->" | safeHTML}}
 		{{ if .IsHome }}
 		<div class="collapse navbar-collapse" id="navigation">
-			<ul class="navbar-nav mx-auto navigation-menu">
+			<ul class="navbar-nav ml-auto navigation-menu">
 				<li class="nav-item">
 					<a class="nav-link text-uppercase" href="#body">{{ with .Site.Params.home }}{{ . }}{{ end }}</a>
 				</li>
