--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -5,7 +5,7 @@
 		{{"<!-- logo -->" | safeHTML}}
 		<a class="navbar-brand logo" href="{{ .Site.BaseURL | relLangURL }}">
 			{{ if .Site.Params.logo }}
-			<img width="200px" class="img-fluid" src="http://localhost:1313/images/logo-horizontal.png" alt="{{ .Site.Title }}">
+			<img width="200px" class="img-fluid" src="/images/logo-horizontal.png" alt="{{ .Site.Title }}">
 			{{ else }}
 			{{ .Site.Title }}
 			{{ end }}
