--- a/layouts/partials/skill.html
+++ b/layouts/partials/skill.html
@@ -5,7 +5,7 @@
 {{"<!-- Skills -->" | safeHTML }}
 <section id="skills" class="parallax-section section section-bg overly">
 	<div class="container">
-		<div class="row">
+		<div class="row">kirekhar
 			{{"<!-- section title -->" | safeHTML }}
 			<div class="col-lg-12">
 				<div class="title text-center">
