Recolor CTA text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -678,7 +678,7 @@ a:hover {
 
 .call-to-action p {
     font-size: 20px;
-    color: #01e7ff;
+    color: #D3DFEA;
 }
 
 .call-to-action .btn-main {
