--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -28,6 +28,13 @@
 					</li>
 					{{ end }}
 					{{ end }}
+					
+
+					{{ range .Site.Menus.static }}
+					<li class="nav-item"><a class="nav-link" target="_blank" href="{{ .URL }}">{{ .Name }}</a>
+					</li>
+					{{ end }}
+					
 				</ul>
 				<!-- Language List -->
 				{{- if .Site.IsMultiLingual }}
