--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
 
   {{"<!-- Custom stylesheet - for your changes -->" |safeHTML}}
-  <link rel="stylesheet" href="{{ "css/custom.css" | relURL}} " media="screen">
+  <link rel="stylesheet" href="{{ `css/custom.css` | relURL}} " media="screen">
 
 	{{ "<!--Favicon-->" | safeHTML }}
 	<link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
