--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,15 +4,14 @@
 
 	{{ "<!-- mobile responsive meta -->" | safeHTML }}
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description"
-		content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
+	<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
 	{{ with .Site.Params.author }}
 	<meta name="author" content="{{ . }}">{{ end }}
 	{{ hugo.Generator }}
 
 	{{ "<!-- plugins -->" | safeHTML }}
 	{{ range .Site.Params.plugins.css }}
-	<link rel="stylesheet" href="{{ .link | absURL }} ">
+	<link rel="stylesheet" href="{{ .link | absURL }}">
 	{{ end }}
 
 	{{"<!-- Main Stylesheet -->"|safeHTML}}
@@ -20,10 +19,10 @@
 	<link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
 
   {{"<!-- Custom stylesheet - for your changes -->" |safeHTML}}
-  <link rel="stylesheet" href="{{ `css/custom.css` | relURL}} " media="screen">
+  <link rel="stylesheet" href="{{ `css/custom.css` | relURL}}" media="screen">
 
 	{{ "<!--Favicon-->" | safeHTML }}
-	<link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
-	<link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
+	<link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
+	<link rel="icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
 
 </head>
