--- a/layouts/partials/map.html
+++ b/layouts/partials/map.html
@@ -1,9 +1,11 @@
 {{ if .Site.Params.map.enable }}
+{{ with .Site.Params.map }}
 {{"<!-- Google Map -->" | safeHTML}}
 <div class="google-map">
-	<div id="map" data-latitude="{{ .Site.Params.map.map_latitude }}"
-	data-longitude="{{ .Site.Params.map.map_longitude }}"
-	data-marker="{{ .Site.Params.map.map_marker | absURL }}"
-	data-marker-name="{{ .Site.Title }}"></div>
+	<div id="map" data-latitude="{{ .map_latitude }}"
+	data-longitude="{{ .map_longitude }}"
+	data-marker="{{ .map_marker | absURL }}"
+	data-marker-name="{{ $.Site.Title }}"></div>
 </div>
+{{ end }}
 {{ end }}
