--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,7 +19,7 @@
 						<img src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}" />
 					</a>
 					<br>
-					<p>{{ i18n "copyright" | markdownify }}</p>
+					<p>{{ .Site.Params.copyright | markdownify }}</p>
 				</div>
 			</div>
 		</div>
