Add first post Modify config file Add author page Remove unused file (fr language) Change label our solution to blog and latest blog

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2326,4 +2326,10 @@ figcaption {
     display: block;
 }
 
+img[src*="#blogpost"] {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+}
+
 /*# sourceMappingURL=maps/style.css.map */
