Modify font color in post block

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1266,6 +1266,9 @@ a:hover {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+}
+
+.post-single-content{
     color: white;
 }
 
