--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -14,10 +14,10 @@
 				<div class="content text-center">
 					<figure>
 						{{ if .Params.Image }}
-						<img class="rounded-circle img-fluid" src="{{.Params.Image | relURL }}">
+						<img class="rounded-circle img-fluid lozad" data-src="{{.Params.Image | relURL }}">
 						{{else if .Params.Email}}
-						<img class="rounded-circle img-fluid"
-							src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon">
+						<img class="rounded-circle img-fluid lozad"
+							data-src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon">
 						{{ end }}
 						<figcaption>
 							<h5 class="font-weight-bold">
