Edit spring post

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1272,6 +1272,10 @@ a:hover {
     color: white;
 }
 
+.post-single-content a{
+    color: #0056b3;
+}
+
 .post-block .content h3 {
     margin: 0 0 6px;
     font-size: 20px;
