--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -3,7 +3,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark">
 			<a class="navbar-brand p-0" href="{{ .Site.BaseURL | relLangURL }}">
 				{{ if .Site.Params.logo }}
-				<img class="lozad" class="img-fluid" data-src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">
+				<img class="lozad img-fluid" data-src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">
 				{{ else }}
 				{{ .Site.Title }}
 				{{ end }}
