--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -9,8 +9,8 @@
       <div class="col-lg-12">
         {{"<!-- section title -->" | safeHTML}}
         <div class="title text-center wow fadeInUp" data-wow-duration="500ms">
-          <h2>{{ with .title }} {{ index (split . " ") 0 }} {{ end }}<span class="color">
-              {{ with .title }} {{ index (split . " ") 1 }} {{ end }}</span></h2>
+          <h2>{{ with .title }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
+              {{ with .title }} {{ index (split . " ") 1 | safeHTML }} {{ end }}</span></h2>
           <div class="border-meghna"></div>
         </div>
       </div>
