use `site` instead of `.Site`

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,7 +8,7 @@
       <div class="col-12 text-center">
         <h1>404</h1>
         <h2>Page Not Found</h2>
-				<a class="btn btn-main" href="{{ .Site.BaseURL | relLangURL }}">Back to home</a>
+				<a class="btn btn-main" href="{{ site.BaseURL | relLangURL }}">Back to home</a>
       </div>
     </div>
   </div>
