--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,7 +17,7 @@
         <div class="post-single-content">
           {{ .Content }}
         </div>
-        {{ if .Site.Params.post_share }}
+        {{ if site.Params.post_share }}
         {{ partial "post-share.html" . }}
         {{ end }}
         <!-- comments -->
