--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -1,4 +1,4 @@
-{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ $data := index site.Data site.Language.Lang }}
 
 {{ if $data.cta.cta.enable}}
 {{ with $data.cta.cta}}
