--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,13 +4,13 @@
 
 	{{ "<!-- mobile responsive meta -->" | safeHTML }}
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
-	{{ with .Site.Params.author }}
+	<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
+	{{ with site.Params.author }}
 	<meta name="author" content="{{ . }}">{{ end }}
 	{{ hugo.Generator }}
 
 	{{ "<!-- plugins -->" | safeHTML }}
-	{{ range .Site.Params.plugins.css }}
+	{{ range site.Params.plugins.css }}
 	<link rel="stylesheet" href="{{ .link | absURL }}">
 	{{ end }}
 
@@ -25,7 +25,7 @@
 	<link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
 	<link rel="icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
 
-	{{ with .Site.Params.google_analytics_id }}
+	{{ with site.Params.google_analytics_id }}
 	{{ "<!-- Global Site Tag (gtag.js) - Google Analytics -->" | safeHTML }}
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
 	<script>
