--- a/layouts/partials/map.html
+++ b/layouts/partials/map.html
@@ -1,11 +1,11 @@
-{{ if .Site.Params.map.enable }}
-{{ with .Site.Params.map }}
+{{ if site.Params.map.enable }}
+{{ with site.Params.map }}
 {{"<!-- Google Map -->" | safeHTML}}
 <div class="google-map">
 	<div id="map" data-latitude="{{ .map_latitude }}"
 	data-longitude="{{ .map_longitude }}"
 	data-marker="{{ .map_marker | absURL }}"
-	data-marker-name="{{ $.Site.Title }}"></div>
+	data-marker-name="{{ $site.Title }}"></div>
 </div>
 {{ end }}
 {{ end }}
