--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -1,4 +1,4 @@
-{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ $data := index site.Data site.Language.Lang }}
 
 {{ if $data.portfolio.portfolio.enable }}
 {{ with $data.portfolio.portfolio }}
