--- a/layouts/partials/service.html
+++ b/layouts/partials/service.html
@@ -1,4 +1,4 @@
-{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ $data := index site.Data site.Language.Lang }}
 
 {{ if $data.service.service.enable}}
 {{ with $data.service.service}}
