--- a/layouts/partials/skill.html
+++ b/layouts/partials/skill.html
@@ -1,4 +1,4 @@
-{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ $data := index site.Data site.Language.Lang }}
 
 {{ if $data.skill.skill.enable }}
 {{ with $data.skill.skill }}
