--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,8 +15,8 @@
 	{{ end }}
 
 	{{"<!-- Main Stylesheet -->"|safeHTML}}
-	{{ $styles := resources.Get "css/style.css" | minify}}
-	<link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
+	{{ $styles := resources.Get "css/style.css" | minify | fingerprint "sha384" }}
+	<link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
 
   {{"<!-- Custom stylesheet - for your changes -->" |safeHTML}}
   <link rel="stylesheet" href="{{ `css/custom.css` | relURL}}" media="screen">
