Use background for active menu item

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,7 @@ a:hover {
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
   color: #57cbcc;
+  background-color: #353b43;
 }
 
 .navbar-toggler:focus {
