Fix undefined $site variable

--- a/layouts/partials/map.html
+++ b/layouts/partials/map.html
@@ -5,7 +5,7 @@
 	<div id="map" data-latitude="{{ .map_latitude }}"
 	data-longitude="{{ .map_longitude }}"
 	data-marker="{{ .map_marker | absURL }}"
-	data-marker-name="{{ $site.Title }}"></div>
+	data-marker-name="{{ site.Title }}"></div>
 </div>
 {{ end }}
 {{ end }}
