added config for static link target

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -30,7 +30,7 @@
 					{{ end }}
 
 					{{ range site.Menus.static }}
-					<li class="nav-item"><a class="nav-link" target="_blank" href="{{ .URL }}">{{ i18n .Name }}</a>
+                    <li class="nav-item"><a class="nav-link" target="{{ site.Params.navigation.static_target }}" href="{{ .URL }}">{{ i18n .Name }}</a>
 					</li>
 					{{ end }}
 
