--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -11,7 +11,7 @@
       <div class="col-lg-12">
         <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
 					<h2>{{ with .title }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
-						{{ with .title }} {{ index (split . " ") 1 | safeHTML }} {{ end }}</span></h2>
+            {{ with .title }} {{ after (len (index (split . " ") 0)) . | safeHTML }} {{ end }}</span></h2>
           <div class="border-meghna"></div>
         </div>
       </div>
