--- a/layouts/partials/service.html
+++ b/layouts/partials/service.html
@@ -10,7 +10,7 @@
 				{{"<!-- section title -->" | safeHTML }}
 				<div class="title text-center wow fadeIn" data-wow-duration="500ms">
 					<h2>{{ with .title }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
-							{{ with .title }} {{ index (split . " ") 1 | safeHTML }} {{ end }} </span></h2>
+						{{ with .title }} {{ after (len (index (split . " ") 0)) . | safeHTML }} {{ end }}</span></h2>
 					<div class="border-meghna"></div>
 				</div>
 			</div>
