--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,9 +10,9 @@
 
 {{ partial "cta.html" . }}
 
-{{ partial "service.html" . }}
+<!--{{ partial "service.html" . }}-->
 
-{{ partial "skill.html" . }}
+<!--{{ partial "skill.html" . }}-->
 
 {{ partial "portfolio.html" . }}
 
@@ -24,10 +24,10 @@
 
 {{ partial "testimonial.html" . }}
 
-{{ partial "blog.html" . }}
+<!--{{ partial "blog.html" . }}-->
 
 {{ partial "contact.html" . }}
 
-{{ partial "map.html" . }}
+<!--{{ partial "map.html" . }}-->
 
 {{ end }}
