--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -22,7 +22,7 @@
         <div class="team-member">
           <div class="member-photo">
             {{"<!-- member photo -->" | safeHTML}}
-            <img class="img-fluid lozad" data-src="{{ .image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .image | absURL }}'" alt="{{ .name }}">
+            <img class="img-fluid lozad" style="width: 100%" data-src="{{ .image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .image | absURL }}'" alt="{{ .name }}">
 
             {{"<!-- member social profile -->" | safeHTML}}
             <div class="mask">
