--- a/layouts/partials/feature.html
+++ b/layouts/partials/feature.html
@@ -6,11 +6,11 @@
 <section class="section section-bg about-2 padding-0" id="feature">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-6 padding-0" style="background-image: url('{{ .image_webp | absURL }}'); background-size: cover; background-position: top center; background-repeat: no-repeat; min-height: 400px;">
+			<div class="col-lg-8 padding-0" style="background-image: url('{{ .image_webp | absURL }}'); background-size: 100%; background-repeat: no-repeat;">
 				<!-- this image is for trigger this section fallback background image -->
 				<img class="lozad" style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url({{ .image | absURL }})'" data-src="{{ .image_webp | absURL }}" />
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-4">
 				<div class="content-block">
 					<h2>{{ .title | markdownify }}</h2>
 					<p>{{ .content | markdownify }}</p>
