--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -13,7 +13,7 @@
 				<p>{{ .content | markdownify }}</p>
 				{{ if .button.enable }}
 				{{ with .button }}
-				<a href="{{ .link }}" class="btn btn-main page-scroll">{{ .label }}</a>
+				<a href="{{ .link }}" class="btn btn-transparent page-scroll">{{ .label }}</a>
 				{{ end }}
 				{{ end }}
 			</div>
