--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,13 +5,13 @@
 			<div class="col-xl-12">
 
 				{{"<!-- Footer Social Links -->" | safeHTML}}
-				<div class="social-icon">
+				<!--<div class="social-icon">
 					<ul class="list-inline">
 						{{ range site.Params.social }}
 						<li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
 						{{ end }}
 					</ul>
-				</div>
+				</div>-->
 
 				{{"<!-- copyright -->" | safeHTML}}
 				<div class="copyright text-center">
