--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,7 +445,7 @@ a:hover {
 
 .hero-area:before {
   content: '';
-  background: rgba(0, 0, 0, 0.63);
+  /*background: rgba(0, 0, 0, 0.63);*/
   position: absolute;
   top: 0;
   right: 0;
