added configurations for lectures

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,8 @@
 
 {{ partial "navigation.html" . }}
 
+{{ partial "lectures.html" . }}
+
 {{ partial "blog.html" . }}
 
 {{ partial "testimonial.html" . }}
