--- a/layouts/partials/lectures.html
+++ b/layouts/partials/lectures.html
@@ -1,13 +1,13 @@
 {{ if gt site.RegularPages 0}}
-{{"<!-- Start Blog Section -->" | safeHTML}}
-<section id="blog" class="section">
+{{"<!-- Start Lecture Section -->" | safeHTML}}
+<section id="Lecture" class="section">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-12">
 				{{"<!-- section title -->" | safeHTML}}
 				<div class="title text-center wow fadeInDown">
-					<h2> {{ with i18n "blogTitle" }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
-							{{ with i18n "blogTitle" }} {{ index (split . " ") 1 | safeHTML }} {{ end }} </span></h2>
+					<h2> {{ with i18n "lectureTitle" }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
+							{{ with i18n "lectureTitle" }} {{ index (split . " ") 1 | safeHTML }} {{ end }} </span></h2>
 					<div class="border-meghna"></div>
 				</div>
 			</div>
@@ -18,7 +18,7 @@
 			{{ end }}
 
 			<div class="all-post text-center col-lg-12">
-				<a class="btn btn-main" href="{{ `lectures` | absLangURL }}">{{ i18n "viewAllPost" }}</a>
+				<a class="btn btn-main" href="{{ `lectures` | absLangURL }}">{{ i18n "viewAllLectures" }}</a>
 			</div>
 		</div>
 	</div>
