added lectures to the index page

--- a/layouts/partials/lectures.html
+++ b/layouts/partials/lectures.html
@@ -13,7 +13,7 @@
 			</div>
 			{{"<!-- /section title -->" | safeHTML}}
 
-			{{ range first 3 (where site.RegularPages "Section" "==" "blog")}}
+			{{ range first 3 (where site.RegularPages "Section" "==" "lectures")}}
 			{{ .Render "article"}}
 			{{ end }}
 
