--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,3 +10,6 @@
 .navbar-dark .navbar-nav .nav-link{
     color:white;
 }
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover{
+    background-color:#57cbcc;
+}
