--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,5 +11,6 @@
     color:white;
 }
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover{
-    background-color:#57cbcc;
+    color:white;
+    background-color:#2c9091;
 }
