--- a/layouts/events/upcoming.html
+++ b/layouts/events/upcoming.html
@@ -8,7 +8,7 @@
       </div>
   
       <div class="content">
-        <h3><a href="{{ .Permalink }}">{{ .Event_name }}</a></h3>
+        <h3><a href="{{ .Permalink }}">{{ .event_name }}</a></h3>
         <p>{{ .Summary }}</p>
         <a class="btn btn-transparent" href="{{ .Permalink }}">{{ i18n "readMore" }}</a>
       </div>
