--- a/layouts/partials/events.html
+++ b/layouts/partials/events.html
@@ -6,15 +6,15 @@
 			<div class="col-lg-12">
 				{{"<!-- section title -->" | safeHTML}}
 				<div class="title text-center wow fadeInDown">
-					<h2> {{ with i18n "lectureTitle" }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
-							{{ with i18n "lectureTitle" }} {{ index (split . " ") 1 | safeHTML }} {{ end }} </span></h2>
+					<h2> {{ with i18n "upcomingSectionTitle" }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
+							{{ with i18n "upcomingSectionTitle" }} {{ index (split . " ") 1 | safeHTML }} {{ end }} </span></h2>
 					<div class="border-meghna"></div>
 				</div>
 			</div>
 			{{"<!-- /section title -->" | safeHTML}}
 
-			{{ range first 3 (where site.RegularPages "Section" "==" "lectures")}}
-			{{ .Render "article"}}
+			{{ range first 3 (where site.RegularPages "Section" "==" "events")}}
+			{{ .Render "upcoming"}}
 			{{ end }}
 
 			<div class="all-post text-center col-lg-12">
