--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2 text-center">
-        <h1>{{ .Params.event_name }}</h1>
+        <h1>{{ .Title }}</h1>
         <!-- <ul class="list-inline mb-50">
           <li class="list-inline-item"><a href="{{ `author/` | relLangURL }}{{ .Params.Author | urlize }}/">{{ .Params.Author }}</a></li>
           <li class="list-inline-item">{{ dateFormat "Monday, Jan 2, 2006" .Params.event_start_date }}</li>
