--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -17,7 +17,7 @@
         <div class="post-single-content">
           {{ .Content }}
         </div>
-        <button class="btn btn-main" onclick="downloadEvent()"><i class=ti-calendar"></i>Block Calender</button>
+        <button class="btn btn-main" onclick="downloadEvent()"><i class="ti-calendar"></i>Block Calender</button>
         {{ if site.Params.post_share }}
         {{ partial "post-share.html" . }}
         {{ end }}
