some minor update

--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -17,15 +17,6 @@
         <div class="post-single-content">
           {{ .Content }}
         </div>
-        <input type="hidden" id="subject" value="{{.Title }}"/>
-        <input type="hidden" id="cl-description" value="{{ .Params.calendar_description }}"/>
-        <input type="hidden" id="description" value="{{ .Content }}"/>
-        <input type="hidden" id="location" value="Kolkata, IN"/>
-        <input type="hidden" id="start-date" value="{{.Params.event_start_date }}"/>
-        <input type="hidden" id="end-date" value="{{.Params.event_end_date }}"/>
-        <input type="hidden" id="filename" value="{{ .Params.calendar_filename }}"/>
-        <button class="clndr btn btn-main" onclick="downloadEvent()">
-        <i class="ti-calendar"></i>Block Calender</button>
         {{ if site.Params.post_share }}
         {{ partial "post-share.html" . }}
         {{ end }}
@@ -33,6 +24,18 @@
         <div class="mt-5">
           {{ template "_internal/disqus.html" . }}
         </div>
+      </div>
+      <div class="col-lg-8 offset-lg-2 text-center">
+        <input type="hidden" id="subject" value="{{.Title }}"/>
+        <input type="hidden" id="cl-description" value="{{ .Params.calendar_description }}"/>
+        <input type="hidden" id="description" value="{{ .Content }}"/>
+        <input type="hidden" id="location" value="{{.Params.location }}"/>
+        <input type="hidden" id="start-date" value="{{.Params.event_start_date }}"/>
+        <input type="hidden" id="end-date" value="{{.Params.event_end_date }}"/>
+        <input type="hidden" id="filename" value="{{ .Params.calendar_filename }}"/>
+        <button class="clndr btn btn-main" onclick="downloadEvent()">
+            <i class="ti-calendar"></i>Add to Calendar
+        </button>
       </div>
     </div>
   </div>
