--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,8 @@
 
 {{ partial "navigation.html" . }}
 
+{{ partial "events.html" . }}
+
 {{ partial "lectures.html" . }}
 
 {{ partial "blog.html" . }}
@@ -11,6 +13,8 @@
 {{ partial "testimonial.html" . }}
 
 {{ partial "about.html" . }}
+
+{{ partial "funfacts.html" . }}
 
 {{ partial "team.html" . }}
 
@@ -23,8 +27,6 @@
 {{ partial "skill.html" . }}
 
 {{ partial "portfolio.html" . }}
-
-{{ partial "funfacts.html" . }}
 
 {{ partial "pricing.html" . }}
 
