--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -1,6 +1,7 @@
 {{ if gt site.RegularPages 0}}
 {{"<!-- Start Blog Section -->" | safeHTML}}
 <section id="blog" class="section">
+	<img class="lozad" style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url(images/writing.jpg)'" data-src="images/writing.webp" />
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-12">
