--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -1,6 +1,6 @@
 {{ if gt site.RegularPages 0}}
 {{"<!-- Start Blog Section -->" | safeHTML}}
-<section id="blog" class="section"
+<section id="blog" class="section overly bg-2"
 style='background-image: url("/images/writing.webp")'
 >
 	<div class="container">
