--- a/layouts/partials/events.html
+++ b/layouts/partials/events.html
@@ -18,7 +18,7 @@
 			{{ end }}
 
 			<div class="all-post text-center col-lg-12">
-				<a class="btn btn-main" href="{{ `event` | absLangURL }}">{{ i18n "viewAllLectures" }}</a>
+				<a class="btn btn-main" href="{{ `event` | absLangURL }}">{{ i18n "ViewAllEvents" }}</a>
 			</div>
 		</div>
 	</div>
