--- a/layouts/events/upcoming.html
+++ b/layouts/events/upcoming.html
@@ -1,10 +1,12 @@
 <article class="col-lg-4 col-md-6 col-12 clearfix wow fadeInUp mb-4" data-wow-duration="500ms">
     <div class="post-block">
       <div class="media-wrapper">
-        <img class="img-fluid lozad" data-src="{{ .Params.Image_webp | absURL }}"
-         onerror="this.onerror=null;
-         this.src='{{ .Params.Image | absURL }}'"
-         >
+        {{ if (isset .Params.Image_webp && isset .Params.Image) }}
+          <img class="img-fluid lozad" data-src="{{ .Params.Image_webp | absURL }}"
+          onerror="this.onerror=null;
+          this.src='{{ .Params.Image | absURL }}'"
+          >
+         {{ end }}
       </div>
   
       <div class="content">
