--- a/layouts/events/upcoming.html
+++ b/layouts/events/upcoming.html
@@ -1,7 +1,7 @@
 <article class="col-lg-4 col-md-6 col-12 clearfix wow fadeInUp mb-4" data-wow-duration="500ms">
     <div class="post-block">
       <div class="media-wrapper">
-        {{ if (and (isset .Params.Image_webp) (isset .Params.Image)) }}
+        {{ if (and (isset .Params "image_webp") (isset .Params "image")) }}
           <img class="img-fluid lozad" data-src="{{ .Params.Image_webp | absURL }}"
           onerror="this.onerror=null;
           this.src='{{ .Params.Image | absURL }}'"
