--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -15,7 +15,7 @@
           <img class="img-fluid mb-50 lozad" data-src="{{ .Params.Image | absURL }}" alt="blog-image">
         {{end}}
       </div>
-      {{ range .Params.Event_speakers }}
+      {{ range .Params.event_speakers }}
         <div class="col-lg-8 offset-lg-2">
           Speakers
           {{.Speaker_name}} {{.Bio}}
@@ -33,7 +33,7 @@
           {{ template "_internal/disqus.html" . }}
         </div>
       </div>
-      {{if .Params.Disable_download}}
+      {{if .Params.disable_download}}
         <div class="col-lg-8 offset-lg-2">
           <input type="hidden" id="subject" value="{{.Title }}"/>
           <input type="hidden" id="cl-description" value="{{ .Params.calendar_description }}"/>
