--- a/layouts/events/upcoming.html
+++ b/layouts/events/upcoming.html
@@ -1,10 +1,10 @@
 <article class="col-lg-4 col-md-6 col-12 clearfix wow fadeInUp mb-4" data-wow-duration="500ms">
     <div class="post-block">
       <div class="media-wrapper">
-        {{ if (and (isset .Params "image_webp") (isset .Params "image")) }}
-          <img class="img-fluid lozad" data-src="{{ .Params.Image_webp | absURL }}"
+        {{ with .Params.image_webp }}
+          <img class="img-fluid lozad" data-src="{{ .Params.image_webp | absURL }}"
           onerror="this.onerror=null;
-          this.src='{{ .Params.Image | absURL }}'"
+          this.src='{{ .Params.image | absURL }}'"
           >
          {{ end }}
       </div>
